update aboutme mickeyzzc/mickeyzzcblog@81a9a5641e38ebd682bb179959c1a8b1ecf082b3

--- a/about.html
+++ b/about.html
@@ -35,7 +35,13 @@ E-Mail</a></span></div><div class="cc-license animated" itemprop=license><a href
 </a>了解更多，或访问相关的
 <a href=https://git.oschina.net/MickeyZZC/MLSBS title=GIT库 rel="noopener external nofollow noreferrer" target=_blank class=exturl>GIT库
 <i class="fa fa-external-link-alt"></i>
-</a>。</li><li><strong>Golang：</strong> 为Thanos社区和kube-state-metric项目贡献过代码。</li><li><strong>eBPF/Rust：</strong> 在eBPF项目的代表之一DeepFlow社区的Agent项目中，我用Rust实现了MongoDB协议的解码逻辑，为项目做出了贡献。并受邀出席了现场分享。
+</a>。</li><li><strong>Golang：</strong> 为
+<a href=https://github.com/thanos-io/thanos/pull/6782 title=Thanos社区 rel="noopener external nofollow noreferrer" target=_blank class=exturl>Thanos社区
+<i class="fa fa-external-link-alt"></i>
+</a>和
+<a href=https://github.com/kubernetes/kube-state-metrics/pull/2217 title=kube-state-metric项目 rel="noopener external nofollow noreferrer" target=_blank class=exturl>kube-state-metric项目
+<i class="fa fa-external-link-alt"></i>
+</a>贡献过代码。</li><li><strong>eBPF/Rust：</strong> 在eBPF项目的代表之一DeepFlow社区的Agent项目中，我用Rust实现了MongoDB协议的解码逻辑，为项目做出了贡献。并受邀出席了现场分享。
 <a href="https://www.bilibili.com/video/BV1Nu4y1A7ZC/?spm_id_from=333.999.0.0&amp;vd_source=81150209c427c9e280d08171153d1c60" title=请点击链接 rel="noopener external nofollow noreferrer" target=_blank class=exturl>请点击链接
 <i class="fa fa-external-link-alt"></i></a></li></ul><p>我致力于通过技术创新来解决复杂的技术挑战，并乐于分享我的知识和经验。期待与志同道合的伙伴们一起探索技术的未来。</p></div><footer class=post-footer><hr><div class=reward-container><div><i class="fa-solid fa-mug-hot"></i>请我喝杯咖啡吧 ヾ(^▽^*)))</div><button>
 赞赏</button><div class=post-reward><div class=post-reward-item><img src=/imgs/img-lazy-loading.gif data-src=/imgs/ali-pay.png alt="蓝宝石的傻话 - 支付宝">
